# invoice-categorisation

./: README.md  invoices-categorization.Rproj  pyproject.toml
code/: 01_data_preparation.R  02_add_tagger.R  03_topic_analysis.R  functions.R  tagger.py
