[tool.poetry]
name = "invoices-categorization"
version = "0.1.0"
description = ""
authors = ["Alejandro <alejandro@liqi.it>"]
readme = "README.md"
packages = [{include = "invoices_categorization"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
